more than one css class.

--- a/12.html
+++ b/12.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="primary">Lorem ipsum dolor sit amet consectetur.</div>
-    <div class="secondary">Lorem ipsum dolor sit amet consectetur.</div>
-    <div class="secondary">Lorem ipsum dolor sit amet consectetur.</div>
-    <div class="primary">Lorem ipsum dolor sit amet consectetur.</div>
-    <div class="gold">Lorem ipsum dolor sit amet consectetur.</div>
-    <div class="deepak">Lorem ipsum dolor sit amet consectetur.</div>
+    <div class="primary common">Lorem ipsum dolor sit amet consectetur.</div>
+    <div class="secondary common">Lorem ipsum dolor sit amet consectetur.</div>
+    <div class="secondary common">Lorem ipsum dolor sit amet consectetur.</div>
+    <div class="primary common">Lorem ipsum dolor sit amet consectetur.</div>
+    <div class="gold common">Lorem ipsum dolor sit amet consectetur.</div>
+    <div class="deepak common">Lorem ipsum dolor sit amet consectetur.</div>
   </body>
 </html>
