--- a/13.html
+++ b/13.html
@@ -10,20 +10,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="id1">
+    <div id="id1" class="common">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae et ea
       corporis aspernatur beatae recusandae reprehenderit dolorum? Deleniti
       pariatur quos, voluptas dolorem aspernatur architecto. Odit non impedit
       perspiciatis voluptas! Quia.
     </div>
 
-    <div class="primary">
+    <div class="primary common">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
       totam praesentium fugit alias aspernatur laborum veritatis tenetur, ab,
       quo quae reprehenderit eum in doloremque cupiditate rerum, ducimus itaque
       ut sunt?
     </div>
-    <div class="secondary">
+    <div class="secondary common">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis vel
       earum unde rerum esse soluta? Officiis mollitia blanditiis voluptatum,
       similique natus dolore quo veniam, veritatis nulla libero culpa delectus
